removed vertical-align property from css to fix vscode warning

--- a/css/styles.css
+++ b/css/styles.css
@@ -245,7 +245,6 @@
   }
 
   img, svg, video, canvas, audio, iframe, embed, object {
-    vertical-align: middle;
     display: block;
   }
 
